test: tests for all public methods of classes